@@ -1,8 +1,9 @@
-$Id: ChangeLog,v 1.58 2008/10/06 14:24:41 tho Exp $
+$Id: ChangeLog,v 1.59 2008/11/07 12:07:12 tat Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU x.y.z
+	- [list] u_list_first and u_list_next added to efficiently iterate on lists
 	- [misc] added u_strtok_cleanup facility 
 	- [misc] deprecate u_tokenize in favour of u_strtok
 
